Fixed woth overflow of content

--- a/src/components/Intro/styles.module.css
+++ b/src/components/Intro/styles.module.css
@@ -5,7 +5,6 @@
 .imageCont {
     background-image: url("./images/IntroBackground.png");
     min-height: 100vh;
-    width: 100vw;
     background-repeat: no-repeat;
     background-size: 100vw 110vh;
 }
